fix: adjust tests path

--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
 		"prebuild": "rm -rf dist",
 		"build": "nest build -p ./tsconfig.build.json -c ./nest-cli.json -b swc",
 		"postbuild": "find dist -name '*.spec.js' -o -name '__tests__' | xargs rm -rf",
-		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+		"lint": "eslint \"{src,apps,libs,tests}/**/*.ts\" --fix",
+		"format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
 		"prestart": "pnpm build",
 		"start": "dotenv -e .env.dev -- nest start",
 		"start:dev": "dotenv -e .env.dev -- nest start --watch",
 		"start:prod": "node --env-file=.env ./dist/main",
-		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"pretest": "pnpm prebuild",
 		"test": "dotenv -e .env.test -- jest",
 		"test:watch": "pnpm test -- --watch",
