chore: use npm to run scripts for CI

--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
 		"postbuild": "find dist -name '*.spec.js' -o -name '__tests__' | xargs rm -rf",
 		"lint": "eslint \"{src,apps,libs,tests}/**/*.ts\" --fix",
 		"format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
-		"prestart": "pnpm build",
+		"prestart": "npm run build",
 		"start": "dotenv -e .env.dev -- nest start",
 		"start:dev": "dotenv -e .env.dev -- nest start --watch",
 		"start:prod": "node --env-file=.env ./dist/main",
-		"pretest": "pnpm prebuild",
+		"pretest": "npm prebuild",
 		"test": "dotenv -e .env.test -- jest",
-		"test:watch": "pnpm test -- --watch",
-		"test:cov": "pnpm test -- --coverage",
+		"test:watch": "npm run test -- --watch",
+		"test:cov": "npm run test -- --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"pretest:e2e": "pnpm docker:up database --force-recreate",
-		"test:e2e": "pnpm test -- --config ./jest.e2e-config.ts",
-		"posttest:e2e": "pnpm docker:stop database",
+		"pretest:e2e": "npm docker:up database --force-recreate",
+		"test:e2e": "npm run test -- --config ./jest.e2e-config.ts",
+		"posttest:e2e": "npm run docker:stop database",
 		"prepare": "husky install"
 	},
 	"dependencies": {
