feat: implement GeocodingService with GeocodeMaps API

--- a/.env.sample
+++ b/.env.sample
@@ -6,4 +6,4 @@ MONGODB_PORT="27017"
 MONGODB_HOST="localhost"
 MONGODB_URI="mongodb://${MONGODB_USER}:${MONGODB_PASSWORD}@${MONGODB_HOST}:27017/${MONGODB_DATABASE}?authSource=admin"
 SENTRY_DSN=""
-OPEN_WEATHER_APP_ID=""
+GEOCODE_MAPS_API_KEY=""
