--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"@nestjs/axios": "^3.0.3",
+		"@nestjs/cache-manager": "^2.3.0",
 		"@nestjs/common": "^10.0.0",
 		"@nestjs/config": "^3.2.3",
 		"@nestjs/core": "^10.0.0",
@@ -42,6 +43,7 @@
 		"@sentry/profiling-node": "^8.27.0",
 		"@sentry/types": "^8.27.0",
 		"axios": "^1.7.5",
+		"cache-manager": "5",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
 		"mongoose": "^8.5.2",
